# diagrama_flujo

./: .env  Cargo.toml
src/: main.rs
static/: index.html
static/css/: styles.css
static/js/: main.js
