[package]
name = "diagrama_flujo_ia"
version = "0.1.0"
edition = "2024"

[dependencies]
 axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dotenvy     = "0.15"
tower-http  = { version = "0.5", features = ["fs"] }
